# gql-dyn

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  data.rs  fixtures.rs  main.rs  schema.rs
