[package]
name = "gql-dyn"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
futures = "0.3.31"
juniper = "0.16.1"
juniper_axum = "0.2.0"
lazy_static = "1.5.0"
tokio = { version = "1.43", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["compression-gzip"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
debug = true
